--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,7 @@
         </svg></button>
       </form>
     </div>
-    <div class="gallery">
-      <!-- Карточки изображений -->
-    </div>
+    <div class="gallery"></div>
     <button type="button" class="load-more">Load more</button>
     <script src="index.js" type="module"></script>
   </body>
